# reservation

./: .env  Cargo.toml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/protos/google/protobuf/: cpp_features.proto  descriptor.proto  java_features.proto
abi/src/: lib.rs
abi/src/pb/: reservation.rs
migrations/: 20241110071755_init.down.sql  20241110071755_init.up.sql  20241110073929_create_reservertion.down.sql  20241110073929_create_reservertion.up.sql  20241110074316_create_reservertion_trigger.down.sql  20241110074316_create_reservertion_trigger.up.sql  20241110074753_create_reservertion_func.down.sql  20241110074753_create_reservertion_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
service/: Cargo.toml
sql/: init.sql
sql/uuid-1.6.2/perl/: uuid.ts  uuid_compat.ts
sql/uuid-1.6.2/php/: package.xml  uuid.ts
