[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
prost-types = "0.13.3"
chrono = { version = "0.4.38", features = ["serde"] }
tonic = { version = "0.12.3", features = ["gzip"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

[build-dependencies]
# 根据grpc的proto生成对应客户端的代码
tonic-build = "0.12.3"
